Fixed the overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,8 @@ html {
   height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden !important;
+  position: relative;
+  overflow-x: hidden;
   font-family: Syne;
 }
 
